objects/BRP_Sales_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>HsFormURL__c</fullName>
        <label>HsFormURL</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Name__c</fullName>
        <label>Sales Office Name</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BRP Sales Settings</label>
</CustomObject>